style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
    background-repeat: no-repeat;
    background-size: cover;     /* or 'contain' depending on your needs */
    background-position: center;
    background-attachment: fixed; /* optional: keeps background in place while scrolling */
    background-color: rgb(2, 3, 26);
}

.navbar {
    background-color: rgb(15, 69, 139);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 1.5rem;
}

.navbar a {
    text-decoration-line: none;
    color: rgb(255, 255, 255);
    font-weight: bold;
    font-family: 'Roboto Mono', monospace;
    transition: color 0.3s ease;
}

.navbar a:hover {
    color: rgb(251, 196, 0)
}

.nav-left {
    display: flex;
    gap: 1rem;
    align-items: center;
    list-style: none;
}

.nav-icon {
    width: 35px;
    height: 35px;
    cursor: pointer;
    filter: drop-shadow(0 0 0.75px white);
}

.nav-icon.github {
    width: 20px;
    height: 20px;
}


/* .nav-git {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding: 4px;
    height: 32px;
    width: 32px;
    background: transparent;
    border: none;
    cursor: pointer;
}

.nav-git img {
    width: 24px;
    height: 24px;
    margin: 0 10px;
    cursor: pointer;
    background: transparent;
    border: none;
} */


.nav-links {
    display: flex;
    gap: 30px;
    list-style: none;
    padding: 1rem;
    justify-content: center;
}

.cons {
    font-size: 25px;
    color: white;
}

/* .icon {
    width: 24px;
    height: 24px;
    margin: 0 10px;
    cursor: pointer;
    background: transparent;
    border: none;
} */

.intro-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 90vh;
    padding: 2rem 0;
    color: white;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}


.text {
    font-size: 70px;
    font-family: 'Courier New', Consolas, '', monospace;
    border-right: 3px solid rgb(255, 255, 255);
    white-space: nowrap;
    overflow: hidden;
    font-weight: 600;
    animation: typing 2.1s steps(25) forwards, cursor 1s step-end infinite;
}

.desc1 {
    font-size: 25px;
    white-space: normal;
    border: none;
    overflow: visible;
    text-align: left;
    font-family: 'Roboto Mono', monospace;
    animation: fade 1s ease-out forwards;
    animation-delay: 2.7s;
    opacity: 0;
}

.desc2 {
    font-size: 25px;
    white-space: normal;
    border: none;
    overflow: visible;
    text-align: left;
    font-family: 'Roboto Mono', monospace;;
    animation: fade 1s ease-out forwards;
    animation-delay: 3.2s;
    opacity: 0;
}

@keyframes cursor{
    0% {
        border-color: rgb(255, 255, 255);
    }
    50% {
        border-color: transparent;
    }
    100% {
        border-color: rgb(255, 255, 255);
    }
}

@keyframes typing{
    from {
        width: 0;
    }
    to {
        width: 71%;
    }
}

@keyframes fade {
    from {
        opacity: 0;
        transform: translateY(20px);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

.info {
  color: rgb(163, 161, 161);
}

.scroll-down {
    display: inline-block;
    margin-top: 10rem;
    margin-bottom: 3rem;
    font-size: 4rem;
    color: white;
    text-decoration: none;
    animation: fade 1s ease-in forwards 5s, bounce 2s infinite 6s;
    opacity: 0;
    transition: transform 0.2s;
}

.arrow-cont {
    text-align: center;
}

.scroll-down img {
    width: 60px;
    height: 60px;
    font-weight: bold;
}

.scroll-down:hover {
    transform: translateY(4px);
}

@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0);
    }
    40% {
        transform: translateY(8px);
    }
    60% {
        transform: translateY(4px);
    }
}

@media (max-width: 600px) {
  .text {
    font-size: 2.5em;
  }

  .navbar-buttons {
    flex-direction: column;
    gap: 10px;
  }
}

